feat:新增Individual API與更新Individual API & Mongodb 新增與更新
